removed null from Random Words arrays. Modified random button functions to accept data from any length array

--- a/kingLibs.html
+++ b/kingLibs.html
@@ -15,7 +15,7 @@
     <div class="centerDiv">
         <header>
             <h1>King Libs</h1>
-            <h2>A Mad Lib&ndash;Style JavaScript Practice by Osprey Ink</h2>
+            <h2>A Mad Lib&ndash;Style JavaScript Practice by Connie Roads</h2>
         </header>
         
         <!-- STUFF FOR LATER
